CASSANALYTICS-36: Bulk Reader should dynamically size the Spark job based on estimated table size
Patch by Francisco Guerrero; reviewed by TBD for CASSANALYTICS-36